# School-Archive

./: README.md
Eclipse Projects/eclipse/: eclipse.ini
Eclipse Projects/eclipse workspace/DiCioccioAdamAssign2/: Assignment2 TestPlan - Adam Di Cioccio.docx
Eclipse Projects/eclipse workspace/DiCioccioAssign2/: .project
Eclipse Projects/eclipse workspace/Lab5Interfaces/: .project
Eclipse Projects/eclipse workspace/Lab8/: bankOutput.txt
Eclipse Projects/eclipse workspace/LabExam02/: .project
Eclipse Projects/eclipse workspace/LabExercise06/: .project
Eclipse Projects/eclipse workspace/LabExercise07/: .project
Eclipse Projects/eclipse workspace/LabExercise08/: .project
Eclipse Projects/eclipse workspace/LabExercise09/: .project
Eclipse Projects/eclipse workspace/LabExercise10/: .project
Eclipse Projects/eclipse workspace/NetworkingLab10/: .project
Eclipse Projects/eclipse/.metadata/: version.ini
Eclipse Projects/eclipse/configuration/: config.ini
L1/CST8101 - Computer Essentials/: batch file Example.txt
L1/CST8215 - Intro to Database/: INVENTORYII.sql
L2/CST8102 - Operating Systems Fundamentals/: Lab07 - Adam Di Cioccio.txt  Lab08 - Adam Di Cioccio.txt  Lab09 - Adam Di Cioccio.txt
L2/CST8108 - Networking Basics/: Lab07 Submission - Adam Di Cioccio.docx  Lab07Submission.pka  Lab08 - Adam Di Cioccio.pka  Lab09Submission - Adam Di Cioccio.docx  WS-task2.pcapng
L3 - SPRING 2021/processor architecture/: Lab2.ms14
L3 - SPRING 2021/web programming/: projects
L4 - WINTER 2022/c++ programming/Lab02/: CMakeLists.txt  Vehicle.cpp  Vehicle.h  main.cpp
L4 - WINTER 2022/c++ programming/Lab05/Week11/Week11/: CMakeLists.txt  Lab5.h  Lab5.java  main.cpp
L4 - WINTER 2022/compilers/A22_AdamSara/code/: Buffer.h  CMakeLists.txt  Compilers.c  Compilers.h  MainBuffer.c  MainScanner.c  Scanner.c  Scanner.h
L4 - WINTER 2022/compilers/A32_AdamSara/code/: Buffer.c  Buffer.h  CMakeLists.txt  Compilers.c  Compilers.h  MainBuffer.c  MainParser.c  MainScanner.c  Parser.c  Parser.h  Scanner.c  Scanner.h
L4 - WINTER 2022/everyday science/: A11-AdamDiCioccio.docx  A11-AdamDiCioccio.pages  Get to know you survey - F20.docx  Get to know you survey - F20.pages
L5 - SPRING 2022/IntroToWebApplications-main/: IntroToWebApplications.sln
L5 - SPRING 2022/project 1/: dici0007.txt
(+646 files in other folders)
